# app/controllers/api/v1/super_admin/orders_controller.rb
@@ -41,7 +41,7 @@ module Api
       private
 
       def order_params
-        params.require(:order).permit(:template_id, :price, :status)
+        params.require(:order).permit(:template_id, :marketplace_id, :order_number, :status)
       end
     end
   end
