# app/models/order.rb
@@ -1,8 +1,9 @@
 class Order < ApplicationRecord
   belongs_to :template
+  belongs_to :marketplace
   has_one    :invitation, dependent: :destroy
 
   enum :status, { pending: "pending", working: "working", review: "review", completed: "completed" }
 
-  validates :price, presence: true, numericality: { greater_than_or_equal_to: 0 }
+  validates :order_number, presence: true, uniqueness: { scope: :marketplace_id }
 end
